remove api-key and sanbox module (#99)